# ddd_proj

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  test_1.py
PullentiServer/: Dockerfile  log.txt  readme.txt
app/applications/api/: Dockerfile  lifespan.py  main.py
app/logic/: init.py
app/setings/: setting.py
app/settings/: setting.py
backend/pullenti/: Sdk.py
client/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.vitest.json
client/src/: main.ts
docker/: app.yml  infra.yml  nginx.yml
nginx/: default.conf
pullenti/: Sdk.py
pullenti/morph/: CharsInfo.py  LanguageHelper.py  MorphAspect.py  MorphBaseInfo.py  MorphCase.py  MorphClass.py  MorphFinite.py  MorphForm.py  MorphGender.py  MorphLang.py  MorphMiscInfo.py  MorphMood.py  MorphNumber.py  MorphPerson.py  MorphTense.py  MorphToken.py  MorphVoice.py  MorphWordForm.py  MorphologyService.py
pullenti/ner/: AnalysisResult.py  Analyzer.py  ExtOntology.py  ExtOntologyItem.py  MetaToken.py  MorphCollection.py  NumberSpellingType.py  NumberToken.py  Processor.py  ProcessorService.py  Referent.py  ReferentToken.py  ServerService.py  Slot.py  SourceOfAnalysis.py  TextAnnotation.py  TextToken.py  Token.py
pullenti/semantic/: ISemContainer.py  SemAttribute.py  SemAttributeType.py  SemBlock.py  SemDocument.py  SemFraglink.py  SemFraglinkType.py  SemFragment.py  SemFragmentType.py  SemGraph.py  SemLink.py  SemLinkType.py  SemObject.py  SemObjectType.py  SemProcessParams.py  SemQuantity.py  SemanticService.py
(+1135 files in other folders)
